<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.simtechdata</groupId>
    <artifactId>Syphon</artifactId>
    <version>1.0.0</version>

    <properties>
        <maven.compiler.release>20</maven.compiler.release>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <mainClass>com.simtechdata.Main</mainClass>
        <javafx.version>22-ea+16</javafx.version>
        <!--<javafx.version>21-ea+24</javafx.version>-->
        <maven-jar-plugin>3.3.0</maven-jar-plugin>
        <versions-maven-plugin>2.16.2</versions-maven-plugin>
        <gluonfx-maven-plugin.version>1.0.22</gluonfx-maven-plugin.version>
        <javafx-maven-plugin>0.0.8</javafx-maven-plugin>
        <maven-compiler-plugin>3.12.1</maven-compiler-plugin>
        <maven-dependency-plugin>3.6.1</maven-dependency-plugin>
        <maven-shade-plugin>3.5.1</maven-shade-plugin>
        <resource-config-file/>
        <system-linker-arg/>
        <system-native-image-arg/>
        <compatibility-arg/>
        <package.type/>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-base</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>2.10.1</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>21-ea+24</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-graphics</artifactId>
            <version>21-ea+24</version>
        </dependency>
        <dependency>
            <groupId>org.jsoup</groupId>
            <artifactId>jsoup</artifactId>
            <version>1.17.2</version>
        </dependency>
        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>2.15.1</version>
        </dependency>
    </dependencies>
    <build>
        <plugins>

            <!-- Maven Versions -->
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>versions-maven-plugin</artifactId>
                <version>${versions-maven-plugin}</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>display-dependency-updates</goal>
                            <goal>display-plugin-updates</goal>
                            <goal>property-updates-report</goal>
                            <goal>dependency-updates-report</goal>
                            <goal>plugin-updates-report</goal>
                            <goal>update-properties</goal>
                            <goal>use-latest-versions</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <!-- Maven compiler plugin-->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven-compiler-plugin}</version>
            </plugin>

            <!-- JavaFX Maven plugin-->
            <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>${javafx-maven-plugin}</version>
                <configuration>
                    <mainClass>${mainClass}</mainClass>
                </configuration>
            </plugin>

            <!-- GUI native image builder plugin-->
            <plugin>
                <groupId>com.gluonhq</groupId>
                <artifactId>gluonfx-maven-plugin</artifactId>
                <version>${gluonfx-maven-plugin.version}</version>
                <configuration>
                    <mainClass>${mainClass}</mainClass>
                    <linkerArgs>
                        <arg>${system-linker-arg}</arg>
                    </linkerArgs>
                    <nativeImageArgs>
                        <arg>--enable-url-protocols=https</arg>
                        <arg>--enable-url-protocols=http</arg>
                        <arg>--no-fallback</arg>
                        <arg>--verbose</arg>
                        <arg>--add-exports=org.graalvm.nativeimage.builder/com.oracle.svm.core.jdk=ALL-UNNAMED</arg>
                        <arg>${system-native-image-arg}</arg>
                        <arg>${compatibility-arg}</arg>
                    </nativeImageArgs>
                    <appIdentifier>Syphon</appIdentifier>
                    <releaseConfiguration>
                        <vendor>Syphon</vendor>
                        <description>Syphon is a program that will crawl a web server and recursively traverse all of its folders and download files either in total, or selectively
                        </description>
                        <packageType>${package.type}</packageType>
                        <bundleShortVersion>${project.version}</bundleShortVersion>
                        <bundleVersion>${project.version}</bundleVersion>
                        <!-- for macOS/iOS -->
                        <skipSigning>true</skipSigning>
                    </releaseConfiguration>
                </configuration>
            </plugin>

            <!-- Maven Jar plugin-->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>${maven-jar-plugin}</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <!-- Maven dependency plugin-->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <version>${maven-dependency-plugin}</version>
                <executions>
                    <execution>
                        <id>copy-dependencies</id>
                        <phase>prepare-package</phase>
                        <goals>
                            <goal>copy-dependencies</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>${project.build.directory}/libs</outputDirectory>
                            <overWriteReleases>false</overWriteReleases>
                            <overWriteSnapshots>false</overWriteSnapshots>
                            <overWriteIfNewer>true</overWriteIfNewer>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <!-- Maven shade plugin -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>${maven-shade-plugin}</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <transformers>
                                <transformer
                                        implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                    <mainClass>com.simtechdata.Main</mainClass>
                                </transformer>
                            </transformers>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <!-- To run the graalvm tracer, first run mvn clean package, then run this:
         java (2 dashes)module-path /Users/michael/JetBrainsProjects/IntelliJIdea/Syphon/target/libs (2 dashes)add-modules javafx.base,javafx.controls,javafx.graphics -agentlib:native-image-agent=config-output-dir=/Users/michael/JetBrainsProjects/IntelliJIdea/Syphon/graalvm -jar target/SyphonTwo-1.0.0.jar -->

    <profiles>
        <!-- [=macOS] GUI native image builder profile -->
        <profile>
            <id>build-for-macos-latest</id>
            <properties>
                <package.type>pkg</package.type>
                <system-native-image-arg>-Dsvm.platform=org.graalvm.nativeimage.Platform$MACOS_AMD64
                </system-native-image-arg>
                <system-linker-arg>${pom.basedir}/config/missing_symbols-macos-latest.o</system-linker-arg>
                <mac.app.store>true</mac.app.store>
            </properties>
        </profile>
        <!-- [Linux] GUI native image builder profile -->
        <profile>
            <id>build-for-ubuntu-latest</id>
            <properties>
                <system-linker-arg>${pom.basedir}/config/missing_symbols-ubuntu-latest.o</system-linker-arg>
                <compatibility-arg>-march=compatibility</compatibility-arg>
            </properties>
        </profile>
        <!-- [Windows] GUI native image builder profile -->
        <profile>
            <id>build-for-windows-latest</id>
            <properties>
                <package.type>msi</package.type>
                <system-linker-arg>${pom.basedir}/config/missing_symbols-windows-latest.o</system-linker-arg>
                <compatibility-arg>-march=compatibility</compatibility-arg>
            </properties>
        </profile>
    </profiles>
</project>
